# nxlib

./: .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: docs.yml  nxlib_test.yml  publish_wiki.yml  pypi-publish.yml
example/: .gitignore  README.md  main.py  nx_get_points.py  pyproject.toml
example/assets/: point-cloud.prt
scripts/: generate_docs.py  generate_md_docs.py
src/nxlib/: __init__.py  _status.py  exceptions.py  geometry.py  io.py  tc_auth.py
src/nxlib/models/: __init__.py  units.py
src/nxlib/nxopen/: __init__.py  common.py  component.py  export.py  nx_geometry.py  nx_geometry.pyi  part.py  section.py  teamcenter.py  uf.py
src/nxlib/nxopen/serializers/: __init__.py  attributes.py
src/nxlib/nxtest/: __init__.py  _nx_run_test.py  main.py
src/nxlib/utility/: __init__.py  common.py  install.py  main.py  run.py
tests/: nxtest_attributes.py  nxtest_common.py  nxtest_export.py  nxtest_geometry.py  nxtest_sections.py  nxtest_uf.py  test_auth.py  test_geometry_json_roundtrip.py  test_install.py  test_run.py  test_version.py
tests/data/: attr_assy.prt  model1.prt  model2.prt  planetest.prt  sections.prt
tests/fixtures/: capture.py  common.py
tests/integration/: hello.py
